WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28974
chromium windows compile broken
https://bugs.webkit.org/show_bug.cgi?id=28974
Summary
chromium windows compile broken
Tony Chang
Reported
2009-09-04 09:46:28 PDT
I forgot to return a value in a RenderThemeChromiumSkia::paintSliderThumb and gcc didn't complain to me on linux. Patch coming.
Attachments
v1
(1.23 KB, patch)
2009-09-04 09:48 PDT
,
Tony Chang
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2009-09-04 09:48:11 PDT
Created
attachment 39071
[details]
v1
David Levin
Comment 2
2009-09-04 10:08:56 PDT
Committed as
http://trac.webkit.org/changeset/48061
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug