Fix Chromium Win compile.  Missing return statement in WebCore::RenderThemeChromiumSkia::paintSliderThumb. https://bugs.webkit.org/show_bug.cgi?id=28974

Patch by Tony Chang <tony@chromium.org> on 2009-09-04
Reviewed by David Levin.

No new tests, build fix.

* rendering/RenderThemeChromiumSkia.cpp:
(WebCore::RenderThemeChromiumSkia::paintSliderThumb):

Canonical link: https://commits.webkit.org/39637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48061 268f45cc-cd09-0410-ab3c-d52691b4dbfc